# spatial-queries-taxi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: CompilerWarnings.cmake  SubmodulesCheck.cmake
src/: csvUtils.h  lib.h  loader.h  rtree.cpp  rtree.h  utils.h
tests/: main_test.cpp
